--- a/css/style.css
+++ b/css/style.css
@@ -34,15 +34,39 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.btn-white {
+  padding: 10px 20px;
+  border-radius: 20px;
+  background-color: #ffffff;
+  color: black;
+  cursor: pointer;
+}
+
+.btn-black {
+  padding: 10px 20px;
+  border-radius: 30px;
+  background-color: #23272a;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 /* HEADER */
 
+header {
+  background-image: url(../img/jumbo.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .header-nav {
-  background-color: #add8e6;
   display: flex;
   align-items: center;
-
-  /* DEBUG */
-  min-height: 100px;
+  padding: 30px 0;
 }
 
 /* HEADER NAV */
@@ -72,48 +96,51 @@ body {
   font-size: 1.3rem;
 }
 
-.link-list > li > a {
-  text-decoration: none;
-  color: white;
-}
-
 .nav-login {
   text-align: right;
-  cursor: pointer;
-}
-
-.nav-login > span {
-  background-color: #ffffff;
-  padding: 15px;
-  border-radius: 20px;
 }
 
 /* HEADER MAIN */
-
-.header-main {
-  background-color: #00008b;
-
-  /* DEBUG */
-  min-height: 100px;
-}
 
 .header-main-container {
   display: flex;
   justify-content: center;
   align-items: center;
-
-  /* DEBUG */
-  min-height: 400px;
+  text-align: center;
+  padding: 80px 0 120px 0;
+  color: white;
 }
 
 .header-content {
-  margin: 5% 0;
+  display: flex;
+  flex-direction: column;
+}
 
-  /* DEBUG */
-  min-width: 70%;
-  min-height: 400px;
-  background-color: #ee81ee;
-  border: var(--dashed-border);
+.header-title {
+  font-size: 48px;
+  padding-bottom: 50px;
+}
+
+.header-paragraph {
+  width: 65%;
+  padding-bottom: 40px;
+  font-size: 20px;
+  align-self: center;
+}
+
+.header-main-btn {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.header-btn-white,
+.header-btn-black {
+  padding: 15px 25px;
+}
+
+.arrow-symbol {
+  padding-right: 5px;
 }
 
 /* MAIN */
